src/css/variables.css
:root {
  --bg: #fff;
  --orange: #f87719;
  --black: #111111;
  --dark-grey: #282828;
  --grey: #595959;
  --light-grey: #b7b7b7;
  --light: #f8f8f8;
  --white: #ffffff;
  --o: #f84119;
  --y: #ffc226;
  --linear-y-o: linear-gradient(141.22deg, var(--o) 9.4%, var(--y) 91.91%);
  --linear-o-y: linear-gradient(141.22deg, var(--y) 9.4%, var(--o) 91.91%);
}
[data-theme='dark'] {
  --bg: #000;
  --text: #fff;
  --button-bg: #000;
}

[data-theme='light'] {
  --bg: #fff;
  --text: #000;
}

.star {
  width: 24px;
  height: 24px;
  display: block;
  background-repeat: no-repeat;
}
.star.star {
  background-image: url('../img/star.svg');
}
.star.star-half {
  background-image: url('../img/star-half.svg');
}
.star.star-outline {
  background-image: url('../img/star-outline.svg');
}
.btn {
  font-family: Roboto;
  font-weight: 500;
  text-align: center;
  vertical-align: middle;
  letter-spacing: 0%;
  padding: 12px 24px;
  border-radius: 74px;
}
.btn-orange-black {
  background: var(--linear-o-y);
   color: var(--black);
  font-size: 16px;
  line-height: 24px;
  border: 1px solid var(--linear-y-o);
}
.btn-orange-black {
  background: var(--black);
   color: var(--black);
  font-size: 16px;
  line-height: 24px;
  border: 1px solid var(--linear-y-o);
}

